# ugsftp

./: .gitignore  Cargo.toml  README.md  strucktur_metadata.txt
src/: main.rs  start-comp.sh
