[package]
name = "ugsftp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "env"] }
remotefs = "0.2.0"
remotefs-ssh = "0.1.2"
serde = { version = "1", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.3"
color-print = "0.3.2"
